# 2D-gui

./: CMakeLists.txt  LICENSE  README.md  cmake.sh
inc/engine/converters/: Dict.hpp  Draw_event_to_dict.h  Sfml_enum_to_string.h  Sfml_event_to_dict.h
inc/engine/gui/: Draw_event.h  Resource_manager.h  Window.h
src/: CMakeLists.txt
src/engine/converters/: Draw_event_to_dict.cpp  Sfml_enum_to_string.cpp  Sfml_event_to_dict.cpp
src/engine/gui/: Draw_event.cpp  Resource_manager.cpp  Window.cpp
